--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,8 @@
 
 
 	--primary-color: #ffffff;  /* azzurro  #03045e*/
-	--secondary-color: #278cca;/*  #00b4d8 *#0077b6; */
-	--third-color: #03055eac;
+	--secondary-color:rgba(241, 190, 7, 0.929);/* #278cca;/*  #00b4d8 *#0077b6; */
+	
 	--fourhcolor:  #90e0ef;
 	--last-color: #caf0f8;/* blu scuro #4c5a86*/
 	--text-color-white: #03055eac; /* Colore di sfondo */
@@ -838,7 +838,7 @@ html [class*='section-'].section-bottom-0 {
 }
 
 .grid-demo-bordered .row {
-	border: 0 solid var(--third-color);
+	border: 0 solid var(--secondary-color);
 	border-top-width: 1px;
 }
 
@@ -856,7 +856,7 @@ html [class*='section-'].section-bottom-0 {
 	top: 0;
 	bottom: 0;
 	left: -1px;
-	border-left: 1px solid var(--third-color);
+	border-left: 1px solid var(--secondary-color);
 }
 
 @media (min-width: 768px) {
@@ -872,7 +872,7 @@ html [class*='section-'].section-bottom-0 {
 }
 
 .grid-demo-underlined .row {
-	border-bottom: 1px solid var(--third-color);
+	border-bottom: 1px solid var(--secondary-color);
 }
 
 .grid-demo-underlined [class*='col'] {
@@ -895,15 +895,15 @@ html [class*='section-'].section-bottom-0 {
 
 /** @section Backgrounds */
 .table-custom.table-cart td, .post-creative {
-	color: var(--text-color-black);
+	color: var(--text-white);
 }
 
 .table-custom.table-cart td h1, .post-creative h1, .table-custom.table-cart td h2, .post-creative h2, .table-custom.table-cart td h3, .post-creative h3, .table-custom.table-cart td h4, .post-creative h4, .table-custom.table-cart td h5, .post-creative h5, .table-custom.table-cart td h6, .post-creative h6, .table-custom.table-cart td [class^='heading-'], .post-creative [class^='heading-'] {
-	color: var(--text-color-black);
+	color: var(--text-white);
 }
 
 .bg-gray-100 {
-	background-color: var(--text-color-white);
+	background-color: var(--text-white);
 }
 
 .bg-gray-100:not([style*="background-"]) + .bg-gray-100:not([style*="background-"]) {
@@ -1229,7 +1229,7 @@ html:not(.lt-ie10) .not-animated {
 	justify-content: center;
 	align-items: center;
 	padding: 20px;
-	background: #FFF;
+	background: var(--primary-color);
 	transition: 0.3s all ease;
   }
   
@@ -1321,9 +1321,9 @@ html:not(.lt-ie10) .not-animated {
 	height: 48px;
 	font-size: 20px;
 	line-height: 44px;
-	color: var(--text-color-white);
+	color: var(--secondary-color);
 	background: #ffffffba;
-	border: 2px solid var(--text-color-white);
+	border: 2px solid var(--secondary-color);
 	overflow: hidden;
 	text-align: center;
 	text-decoration: none;
@@ -1337,7 +1337,7 @@ html:not(.lt-ie10) .not-animated {
 
 
 .ui-to-top:hover {
-  background: var(--text-color-white);
+  background: var(--secondary-color);
   color: var(--text-white);
   transform: rotate(360deg); /* effetto divertente */
   border: 2px solid  var(--text-white);
@@ -1447,7 +1447,7 @@ html.tablet .ui-to-top {
 .rd-navbar-toggle span:after {
 	top: 6px;
 }
-
+/*toggle barra laterale*/
 .rd-navbar-toggle span:after, .rd-navbar-toggle span:before, .rd-navbar-toggle span {
 	width: 22px;
 	height: 2px;
@@ -1467,7 +1467,7 @@ html.tablet .ui-to-top {
 
 .rd-navbar-toggle.active span {
 	transform: rotate(180deg);
-	transition: background .3s 0s ease;
+	transition: .3s 0s ease;
 	background: transparent;
 }
 
@@ -1504,6 +1504,8 @@ html.tablet .ui-to-top {
 	top: 50%;
 	margin-top: -3px;
 }
+
+/* toggle dx per social*/
 
 .rd-navbar-collapse-toggle span, .rd-navbar-collapse-toggle span:before, .rd-navbar-collapse-toggle span:after {
 	position: absolute;
@@ -1612,11 +1614,13 @@ html.tablet .ui-to-top {
 .rd-megamenu-list li > a:focus,
 .rd-megamenu-list li > a:active {
 	color: var(--text-color-white);
+	
 }
 
 .rd-navbar-dropdown li > a:hover,
 .rd-megamenu-list li > a:hover {
 	color: var(--secondary-color);
+	
 }
 
 .rd-navbar-dropdown li > a, .rd-navbar-dropdown li > a::before,
@@ -1717,11 +1721,11 @@ html.tablet .ui-to-top {
 .rd-navbar-static .rd-nav-item + .rd-nav-item {
 	margin-left: 38px;
 }
-
+/* barra statica */
 .rd-navbar-static .rd-nav-link {
 	position: relative;
 	display: inline-block;
-	color: var(--text-color-white);
+	color: var(--text-white);
 	line-height: 1.2;
 	transition: .25s;
 	text-transform: uppercase;
@@ -1741,14 +1745,6 @@ html.tablet .ui-to-top {
 	transform: translate3d(0, 30px, 0);
 }
 
-.rd-navbar-static .rd-navbar-dropdown {
-	position: absolute;
-	left: -19px;
-	width: 214px;
-	padding: 17px 15px 24px 6px;
-	background: var(--primary-color);
-	z-index: 5;
-}
 
 .rd-navbar-static .rd-navbar-dropdown .rd-navbar-dropdown {
 	top: -1px;
@@ -1771,27 +1767,6 @@ html.tablet .ui-to-top {
 	margin-top: 17px;
 }
 
-.rd-navbar-static .rd-dropdown-item.focus .rd-dropdown-link, .rd-navbar-static .rd-dropdown-item.opened .rd-dropdown-link {
-	color: var(--primary-color);
-}
-
-.rd-navbar-static .rd-dropdown-link {
-	color: var(--text-color-white);
-}
-
-.rd-navbar-static .rd-dropdown-link:hover {
-	color: var(--primary-color);
-}
-
-.rd-navbar-static .rd-navbar-megamenu {
-	display: flex;
-	left: 0;
-	width: 100%;
-	max-width: 1200px;
-	background: var(--primary-color);
-	overflow: hidden;
-}
-
 .rd-navbar-static .rd-megamenu-item {
 	flex-basis: 50%;
 	flex-grow: 1;
@@ -1799,56 +1774,8 @@ html.tablet .ui-to-top {
 	flex-direction: column;
 }
 
-.rd-navbar-static .rd-megamenu-title {
-	color: var(--primary-color);
-	font-weight: 700;
-	letter-spacing: .025em;
-	font-size: 18px;
-}
-
-.rd-navbar-static .rd-megamenu-list-item + .rd-megamenu-list-item {
-	margin-top: 17px;
-}
-
-.rd-navbar-static .rd-megamenu-list-link:hover {
-	color: var(--primary-color);
-	background: transparent;
-}
-
-.rd-navbar-static .rd-megamenu-list {
-	flex-grow: 1;
-}
-
-.rd-navbar-static .rd-navbar-submenu.focus > .rd-menu, .rd-navbar-static .rd-navbar-submenu.opened > .rd-menu {
-	opacity: 1;
-	visibility: visible;
-	transform: translate3d(0, 0, 0);
-}
-
-.rd-navbar-static .rd-navbar-search.active .rd-search {
-	visibility: visible;
-	opacity: 1;
-}
-
-.rd-navbar-static .rd-search {
-	position: absolute;
-	top: 100%;
-	right: 0;
-	width: 270px;
-	opacity: 0;
-	visibility: hidden;
-	transition: .3s;
-	margin-top: 20px;
-	z-index: 2;
-}
-
 .rd-navbar-static * + .rd-navbar-search {
 	margin-left: 38px;
-}
-
-.rd-navbar-static .rd-navbar-search-toggle {
-	display: inline-flex;
-	color: var(--text-color-white);
 }
 
 .rd-navbar-static .rd-navbar-search-toggle span {
@@ -1906,10 +1833,6 @@ html.tablet .ui-to-top {
 	visibility: visible;
 }
 
-.rd-navbar-static .rd-navbar-search-toggle:hover {
-	color: var(--primary-color);
-}
-
 .rd-navbar-static.rd-navbar--is-clone {
 	display: block;
 	transform: translate3d(0, -100%, 0);
@@ -1918,14 +1841,14 @@ html.tablet .ui-to-top {
 .rd-navbar-static.rd-navbar--is-clone.rd-navbar--is-stuck {
 	transform: translate3d(0, 0, 0);
 }
-/* barra con scroll */
+/* barra fissa con scroll*/
 .rd-navbar-static.rd-navbar--is-stuck, .rd-navbar-static.rd-navbar--is-clone {
 	position: fixed;
 	left: 0;
 	top: 0;
 	right: 0;
 	z-index: 1080;
-	background: var(--secondary-color);
+	background: var(--text-color-white);
 }
 
 .rd-navbar-static .rd-navbar--has-dropdown {
@@ -2830,7 +2753,7 @@ html.rd-navbar-fixed-linked .page {
 	display: block;
 	position: absolute;
 	height: 2px;
-	background-color: var(--primary-color);
+	background-color: var(--secondary-color);
 	opacity: 0;
 	transition: all 0.3s ease-in-out;
 	pointer-events: none;
@@ -3642,7 +3565,7 @@ html.rd-navbar-fixed-linked .page {
 	line-height: 1.7;
 	letter-spacing: .1em;
 	text-transform: uppercase;
-	color: var(--third-color);
+	color: var(--secondary-color);
 }
 
 .rd-search-results .match em {
@@ -4017,9 +3940,9 @@ button.button.isotope-filters-toggle {
 	}
 	.tabs-line .nav-link:hover,
 	.tabs-line .nav-link.active {
-		color: var(--third-color);
-		background: var(--third-color);
-		border-color: var(--third-color);
+		color: var(--secondary-color);
+		background: var(--secondary-color);
+		border-color: var(--secondary-color);
 	}
 }
 
@@ -4045,8 +3968,8 @@ button.button.isotope-filters-toggle {
 
 .tabs-corporate .nav-link:hover,
 .tabs-corporate .nav-link.active {
-	color: var(--third-color);
-	border-color: var(--third-color);
+	color: var(--secondary-color);
+	border-color: var(--secondary-color);
 }
 
 .tabs-corporate .tab-content {
@@ -4085,7 +4008,7 @@ button.button.isotope-filters-toggle {
 	}
 	.tabs-horizontal.tabs-corporate .nav-link.active,
 	.tabs-horizontal.tabs-corporate .nav-link:hover {
-		color: var(--third-color);
+		color: var(--secondary-color);
 		background-color: transparent;
 	}
 	.tabs-horizontal.tabs-corporate .nav-link.active::before,
@@ -4117,7 +4040,7 @@ button.button.isotope-filters-toggle {
 		left: 0;
 		height: 4px;
 		width: 0;
-		background: var(--third-color);
+		background: var(--secondary-color);
 		transition: .22s ease;
 	}
 	.tabs-horizontal.tabs-line .nav-link.active,
@@ -4974,7 +4897,7 @@ h2 + .tabs-albums {
 	transform: translate(-50%, 0);
 	bottom: 6px;
 	height: 1px;
-	background-color: #00528c;
+	background-color: var(--text-color-white);
 }
 
 .owl-carousel-bio .owl-nav {
@@ -4990,12 +4913,12 @@ h2 + .tabs-albums {
 
 .owl-carousel-bio .owl-prev:hover,
 .owl-carousel-bio .owl-next:hover {
-	color: #00528c72 !important;
+	color: var(--secondary-color) !important;
 }
 
 .owl-carousel-bio .owl-prev:hover::before,
 .owl-carousel-bio .owl-next:hover::before {
-	color: #00528c;
+	color: var(--secondary-color)
 }
 
 .owl-carousel-bio .owl-prev::before,
@@ -5049,10 +4972,7 @@ h2 + .tabs-albums {
 		width: 88px;
 		color: var(--text-color-white);
 	}
-	.owl-carousel-bio .owl-prev:hover,
-	.owl-carousel-bio .owl-next:hover {
-		color: #00528c;
-	}
+	
 	.owl-carousel-bio .owl-prev {
 		left: 15px;
 		transform: translate(-100%, 0);
@@ -7963,7 +7883,7 @@ yx-axis
 }
 
 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-	background-color: var(--third-color);
+	background-color: var(--secondary-color);
 }
 
 .mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar,
@@ -8229,7 +8149,7 @@ yx-axis
 
 .jp-player-init .jp-play-bar,
 .jp-player-init .jp-volume-bar-value {
-	background-color: var(--third-color);
+	background-color: var(--secondary-color);
 }
 
 .jp-state-playing .jp-mute:before {
@@ -8651,7 +8571,7 @@ yx-axis
 	width: 70px;
 	height: 10px;
 	cursor: pointer;
-	background: var(--third-color);
+	background: var(--secondary-color);
 	border-radius: 5px;
 	box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.4), 0 1px 0 rgba(255, 255, 255, 0.4);
 }
@@ -8998,7 +8918,7 @@ yx-axis
 }
 
 .jp-modern .jp-modern-linklist li a:hover {
-	color: var(--third-color);
+	color: var(--secondary-color);
 }
 
 .jp-modern .jp-modern-linklist li + li::before {
@@ -9924,7 +9844,7 @@ h4 a,
 
 h4 a:hover,
 .heading-4 a:hover {
-	color: var(--third-color);
+	color: var(--secondary-color);
 }
 
 h5,
@@ -10166,16 +10086,22 @@ a[href*='tel'], a[href*='mailto'] {
 .socialite {
 	display: block;
 	text-align: center;
-	color: var(--text-color-white);
+	color: var(--primary-color);
 	width: 25px;
 	height: 25px;
 	line-height: 25px;
 	border-radius: 10em;
 }
 
+
 .socialite:hover {
-	color: var(--primary-color);
-	background-color: var(--text-color-white);
+	color: var(--secondary-color);
+}
+
+@media (max-width: 768px) {
+	.socialite {
+		color: var(--text-color-white) /* colore mobile */
+	}
 }
 
 a.link-social {
@@ -10212,13 +10138,6 @@ a.link-social[class*='facebook'] {
 	background: #547abb;
 }
 
-a.link-social[class*='twitter'] {
-	background: #44c0f3;
-}
-
-a.link-social[class*='pinterest'] {
-	background: #dd4b39;
-}
 
 a.link-social[class*='instagram'] {
 	background: #5c6a97;
@@ -10295,7 +10214,7 @@ a.link-social:hover::after {
 
 .box-minimal-text p {
 	margin-top: 8px;
-	color: var(--third-color);
+	color: var(--secondary-color);
 }
 
 * + .box-minimal {
@@ -10861,7 +10780,7 @@ a.link-social:hover::after {
 
 .box-bio-year {
 	margin-top: 3px;
-	color: var(--secondary-color);
+	color: var(--text-color-white);
 	font-family: "Source Code Pro", Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 	font-weight: 500;
 	position: relative;
@@ -10876,7 +10795,7 @@ a.link-social:hover::after {
 		right: -4px;
 		bottom: -6px;
 		height: 1px;
-		background-color: rgba(9, 155, 208, 0.378);
+		background-color: var(--text-color-white);
 	}
 	.box-bio-year::after {
 		content: '';
@@ -10886,7 +10805,7 @@ a.link-social:hover::after {
 		top: calc(100% + 6px);
 		height: 300px;
 		width: 1px;
-		background-color: rgba(9, 155, 208, 0.378);
+		background-color: var(--text-color-white);
 	}
 }
 
@@ -10903,7 +10822,7 @@ a.link-social:hover::after {
 .box-bio-title {
 	letter-spacing: .1em;
 	font-weight: 700;
-	color: var(--text-color-white);
+	color: var(--secondary-color);
 }
 
 .box-bio-text {
@@ -10924,7 +10843,7 @@ a.link-social:hover::after {
 		left: -15px;
 		bottom: 0;
 		width: 1px;
-		background-color: rgba(9, 155, 208, 0.378);
+		background-color: var(--secondary-color);
 	}
 }
 
@@ -10972,7 +10891,7 @@ a.link-social:hover::after {
 }
 
 .box-comment a:hover {
-	color: var(--third-color);
+	color: var(--secondary-color);
 }
 
 @media (min-width: 992px) {
@@ -11960,7 +11879,7 @@ img {
 hr {
 	margin-top: 0;
 	margin-bottom: 0;
-	border-top: 1px solid var(--third-color);
+	border-top: 1px solid var(--secondary-color);
 }
 
 .divider {
@@ -13112,7 +13031,7 @@ img + .custom-title {
 }
 
 .post-related-footer {
-	color: var(--third-color);
+	color: var(--secondary-color);
 	font-family: "Source Code Pro", Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 	display: flex;
 	justify-content: center;
@@ -13425,7 +13344,7 @@ img + .custom-title {
 }
 
 .post-creative-time {
-	color: var(--third-color);
+	color: var(--secondary-color);
 	font-family: "Source Code Pro", Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 	letter-spacing: 0;
 }
@@ -13492,7 +13411,7 @@ img + .custom-title {
 	display: block;
 	width: 25px;
 	height: 18px;
-	fill: var(--third-color);
+	fill: var(--secondary-color);
 	flex-shrink: 0;
 }
 
@@ -13510,7 +13429,7 @@ img + .custom-title {
 }
 
 .quote-primary-text {
-	border-left: 1px solid var(--third-color);
+	border-left: 1px solid var(--secondary-color);
 	margin-left: 15px;
 	padding-left: 15px;
 }
@@ -13589,7 +13508,7 @@ img + .custom-title {
 	bottom: 0;
 	text-align: center;
 	padding: 25px;
-	background: rgba(1, 34, 133, 0.68);
+	background:rgba(241, 190, 7, 0.56);
 	pointer-events: none;
 	transition: all 0.3s ease-in-out;
 }
@@ -13616,6 +13535,7 @@ img + .custom-title {
 .thumbnail-classic-time {
 	font-family: "Source Code Pro", Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 	position: relative;
+	color: var(--text-white);
 	text-transform: uppercase;
 	margin-top: 16px;
 }
@@ -13816,7 +13736,7 @@ img + .custom-title {
 
 .breadcrumbs-custom-path a:hover,
 .breadcrumbs-custom-path li.active {
-	color: var(--text-color-white);
+	color: var(--secondary-color);
 }
 
 .breadcrumbs-custom-path li.active {
@@ -13948,7 +13868,7 @@ img + .custom-title {
 }
 
 .page-item.disabled > .page-link, .page-item.disabled > .page-link:hover, .page-item.disabled > .page-link:focus, .page-item.disabled > .page-link:active {
-	color: var(--third-color);
+	color: var(--secondary-color);
 	background-color: transparent;
 }
 
@@ -14044,7 +13964,7 @@ footer {
 
 footer .footer-contact,
 footer p.rights {
-	color: var(--text-color-white);
+	color: var(--text-white);
 	font-weight: 700;
 }
 
@@ -14077,7 +13997,7 @@ footer a:hover {
 }
 
 .footer-top {
-	background: #f0f0f7;  /* colore chiaro elegante */
+	background: var(--text-color-white);  /* colore chiaro elegante */
 	padding: 15px 0;
 	text-align: center;
   }
@@ -14085,14 +14005,14 @@ footer a:hover {
   .footer-top h4 {
 	margin: 0;
 	font-size: 1.3rem;
-	color: #444;
+	color: var(--secondary-color);
 	font-weight: 600;
   }
   
   /* Testo footer */
   .footer-text {
 	font-size: 0.95rem;
-	color: var(--text-color-white);
+	color: var(--secondary-color);
 	line-height: 1.5;
   }
   
@@ -14104,6 +14024,7 @@ footer a:hover {
 	width: 100%;
 	margin-top: 20px;
   }
+
   .footer-logo {
   height: 60px;      /* imposta l'altezza desiderata */
   width: auto;       /* mantiene le proporzioni */
@@ -14111,77 +14032,6 @@ footer a:hover {
   margin: 0 auto;    /* centra l'immagine nella colonna */
 }
 
-
-.footer-modern {
-	padding: 75px 0 80px;
-	text-transform: uppercase;
-}
-
-.footer-modern * + .rd-form {
-	margin-top: 10px;
-}
-
-.footer-modern .rd-mailform .form-input {
-	padding-right: 45px;
-}
-
-.footer-creative {
-	padding: 70px 0 40px;
-}
-
-.footer-creative .divider-classic + p {
-	margin-top: 33px;
-}
-
-* + .nav-list-footer {
-	margin-top: 33px;
-}
-
-.nav-list-footer {
-	column-count: 2;
-}
-
-@media (min-width: 768px) {
-	.nav-list-footer {
-		width: 64%;
-	}
-}
-
-.nav-list-footer a {
-	display: block;
-	letter-spacing: .05em;
-	margin-bottom: 6px;
-}
-
-.nav-list-footer a::before {
-	content: '\f14f';
-	font-family: "Material Design Icons";
-	color: var(--primary-color);
-	padding-right: 10px;
-	position: relative;
-	top: 1px;
-	transition: all 0.3s ease-in-out;
-}
-
-.nav-list-footer a:hover {
-	padding-left: 11px;
-}
-
-.nav-list-footer a:hover::before {
-	padding-right: 7px;
-}
-
-.footer-creative-rights {
-	text-align: center;
-	border-top: 1px solid rgba(255, 255, 255, 0.1);
-	margin-top: 57px;
-	padding-top: 33px;
-	text-transform: uppercase;
-}
-
-.footer-creative-rights .footer-contact {
-	display: inline-block;
-}
 
 /** section Aside */
 .aside-item {
